// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`genContextBrain.integration discovery mode (async path) given: [case4] discovery mode with invalid choice when: [t0] generic choice does not match any discovered brain then: throws BrainChoiceNotFoundError with actionable message 1`] = `
"BrainChoiceNotFoundError: brain not found: nonexistent/brain-slug-xyz

🔭 available brains
   <available-brains-masked>

{
  "choice": "nonexistent/brain-slug-xyz",
  "available": "<available-brains-masked>"
}"
`;

exports[`genContextBrain.integration discovery mode (async path) given: [case4] discovery mode with invalid choice when: [t1] typed repl choice does not match then: throws BrainChoiceNotFoundError with repls in message 1`] = `
"BrainChoiceNotFoundError: repl brain not found: nonexistent/repl-xyz

🔭 available brains
   <available-brains-masked>

{
  "choice": {
    "repl": "nonexistent/repl-xyz"
  },
  "available": "<available-brains-masked>"
}"
`;

exports[`genContextBrain.integration discovery mode (async path) given: [case4] discovery mode with invalid choice when: [t2] typed atom choice does not match then: throws BrainChoiceNotFoundError with atoms in message 1`] = `
"BrainChoiceNotFoundError: atom brain not found: nonexistent/atom-xyz

🔭 available brains
   <available-brains-masked>

{
  "choice": {
    "atom": "nonexistent/atom-xyz"
  },
  "available": "<available-brains-masked>"
}"
`;
